# pywebview

./: BUILD.bazel  CLAUDE.md
tests/: test_get_instance.py  test_window_release.py
webview/: menu.py  util.py
