load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

py_library(
    name = "pywebview",
    srcs = glob(["webview/**/*.py"]),
    data = glob([
        "webview/js/**",
        "webview/lib/**",
    ]),
    deps = [
        requirement("bottle"),
        requirement("proxy-tools"),
        requirement("typing-extensions"),
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_get_instance",
    srcs = ["tests/test_get_instance.py"],
    size = "small",
    deps = [
        ":pywebview",
        requirement("pytest"),
    ],
)
